--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-15  John ffitch  <jpff@codemist.co.uk>
+
+	* Top/main.c: Prototype for mytmpnam
+
 2005-05-14  John ffitch  <jpff@codemist.co.uk>
 
 	* Top/argdecode.c (decode_long): Allow definition of macros
