--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-05-23 Victor Lazzarini <victor.lazzarini@nuim.ie>
+        * late entry to the log: added InOut/rtcoreaudio.c
+        * late entry to the log: added Opcodes/sndloop.c (sndloop, flooper, pvsarp, pvsvoc)
+        * late entry to the log: fixed globals in rtpa.c
+        * late entry to the log: added full-duplex support to the portaudio module 
+	 (rtpa.c pa_blocking.c), aimed primarily at coreaudio        
+
 2005-05-23  Steven Yi  <stevenyi@gmail.com>
 
 	* Engine/rdorch.c (splitline): Ported over ithen check from Csound4 source,
