--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
 2005-06-03 Victor Lazzarini <Victor.Lazzarini@nuim.ie>
-       * OOps/pvfileio.c: removed statics and added csound* to functions; changed all
-         relevant function calls elsewhere in the code to match the new prototypes
+	* OOps/pvfileio.c: removed statics and added csound* to functions;
+	 changed all relevant function calls elsewhere in the code to
+	 match the new prototypes 
 
 2005-06-01 Victor Lazzarini <Victor.Lazzarini@nuim.ie>
-       * Opcodes/pvsbasic.c pvsbasic.h
-       added opcode pvsinit for fsig initialisation
+	* Opcodes/pvsbasic.c pvsbasic.h added opcode pvsinit for fsig
+	initialisation 
 
 2005-05-31	Istvan Varga	<istvan@csounds.com>
 	* Engine/otran.c:
@@ -75,7 +76,8 @@
 
 2005-05-23 Victor Lazzarini <victor.lazzarini@nuim.ie>
         * late entry to the log: added InOut/rtcoreaudio.c
-        * late entry to the log: added Opcodes/sndloop.c (sndloop, flooper, pvsarp, pvsvoc)
+        * late entry to the log: added Opcodes/sndloop.c (sndloop,
+	flooper, pvsarp, pvsvoc) 
         * late entry to the log: fixed globals in rtpa.c
         * late entry to the log: added full-duplex support to the portaudio module
 	 (rtpa.c pa_blocking.c), aimed primarily at coreaudio
