--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,14 @@
+2005-06-15  John ffitch  <jpff@codemist.co.uk>
+
+	* SConstruct: Fixed TAGS so it looks at C files as well
+
 2005-06-13    Victor Lazzarini <victor.lazzarini@nuim.ie>
 	* Top/dl_opcodes.c: commented out old code that was causing conflict
 	                    on OSX 10.4
+
 2005-06-09     Victor Lazzarini <victor.lazzarini@nuim.ie>
 	* InOut/rtcoreaudio.c : further improvements to coreaudio RT IO
-	
+
 2005-06-03	Istvan Varga	<istvan@csounds.com>
 	* Engine/oload.c:
 	* H/csoundCore.h:
