--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2005-10-05 Victor Lazzarini <victor.lazzarini@nuim.ie>
+	* Added Tcl/TK frontends (cstclsh and cswish)
+	
 2005-10-15	Michael Gogins	<gogins@pipeline.com>
 	* Fixed SConstruct to build CsoundVST using Csound as a 
 	  shared library.
